--- a/data/index.html
+++ b/data/index.html
@@ -5,33 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blinds</title>
+    <title>BLINDS</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-    <div class="jumbotron">
-        <h1 class="home display-2">Blinds</h1>
-        <p><a href="/on"><button class="btn btn-success active">ON</button></a></p>
-        <p><a href="/off"><button class="btn btn-danger active">OFF</button></a></p>
-    </div>
+    <header>
+        <div class="jumbotron bg-dark" style="margin: 0">
+            <h1 class="home display-2">BLINDS</h1>
+        </div>
+    </header>
+    <main>
+        <div class="container p-3 my-3 border bg-dark" style="margin-top: 0 !important;">
+            <p><a href="/up"><button class="btn btn-success active btn-block">UP</button></a></p>
+            <p><a href="/down"><button class="btn btn-danger active btn-block">DOWN</button></a></p>
+        </div>
 
-    <div class="container p-3 my-3 border">
-        <h1>My First Bootstrap Page</h1>
-        <p>This container has a border and some extra padding and margins.</p>
-    </div>
+        <div class="container p-3 my-3 border">
+            <h1>My First Bootstrap Page</h1>
+            <p>This container has a border and some extra padding and margins.</p>
+        </div>
 
-    <div class="container p-3 my-3 bg-dark text-white">
-        <h1>My First Bootstrap Page</h1>
-        <p>This container has a dark background color and a white text, and some extra padding and margins.</p>
-    </div>
+        <div class="container p-3 my-3 bg-dark text-white">
+            <h1>My First Bootstrap Page</h1>
+            <p>This container has a dark background color and a white text, and some extra padding and margins.</p>
+        </div>
 
-    <div class="container p-3 my-3 bg-primary text-white">
-        <h1>My First Bootstrap Page</h1>
-        <p>This container has a blue background color and a white text, and some extra padding and margins.</p>
-    </div>
+        <div class="container p-3 my-3 bg-primary text-white">
+            <h1>My First Bootstrap Page</h1>
+            <p>This container has a blue background color and a white text, and some extra padding and margins.</p>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
