--- a/data/index.html
+++ b/data/index.html
@@ -18,31 +18,16 @@
         </div>
     </header>
     <main>
-        <div class="container p-3 my-3 border bg-dark" style="margin-top: 0 !important;">
+        <div class="container p-3 my-3 border bg-dark text-center" style="margin-top: 0 !important;margin-bottom: 0 !important;">
             <p><a href="/up"><button class="btn btn-success active btn-block" id="up">UP</button></a></p>
             <p><a href="/down"><button class="btn btn-success active btn-block" id="down">DOWN</button></a></p>
             <p><a href="/stop"><button class="btn btn-danger active btn-block" id="stop">STOP</button></a></p>
-            <p>Current state: <span id="state"></span></p>
-            <progress id="progress" value="0" max="100"></progress>
-        </div>
-
-        <div class="container p-3 my-3 border">
-            <h1>My First Bootstrap Page</h1>
-            <p>This container has a border and some extra padding and margins.</p>
-        </div>
-
-        <div class="container p-3 my-3 bg-dark text-white">
-            <h1>My First Bootstrap Page</h1>
-            <p>This container has a dark background color and a white text, and some extra padding and margins.</p>
-        </div>
-
-        <div class="container p-3 my-3 bg-primary text-white">
-            <h1>My First Bootstrap Page</h1>
-            <p>This container has a blue background color and a white text, and some extra padding and margins.</p>
+            <p><a href="/tilt-up"><button class="btn btn-primary active btn-block" id="tiltUp">TILT UP</button></a></p>
+            <p><a href="/tilt-down"><button class="btn btn-primary active btn-block" id="tiltDown">TILT DOWN</button></a></p>
         </div>
     </main>
-    <footer>
-
+    <footer class="container-fluid text-center bg-dark text-white jumbotron">
+        <p>&copy; 2022/2023 - Pavel Košnar</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
