--- a/data/index.html
+++ b/data/index.html
@@ -18,13 +18,24 @@
         </div>
     </header>
     <main>
-        <div class="container p-3 my-3 border bg-dark text-center" style="margin-top: 0 !important;margin-bottom: 0 !important;">
-            <p><a href="/up"><button class="btn btn-success active btn-block" id="up">UP</button></a></p>
-            <p><a href="/down"><button class="btn btn-success active btn-block" id="down">DOWN</button></a></p>
-            <p><a href="/stop"><button class="btn btn-danger active btn-block" id="stop">STOP</button></a></p>
-            <p><a href="/tilt-up"><button class="btn btn-primary active btn-block" id="tiltUp">TILT UP</button></a></p>
-            <p><a href="/tilt-down"><button class="btn btn-primary active btn-block" id="tiltDown">TILT DOWN</button></a></p>
+        <div class="row container p-3 border bg-dark text-center" style="margin-top: 0 !important;margin-bottom: 0 !important;margin-left: 20%;">
+            <div class="col-6">
+                <p><a href="/up"><button class="btn btn-success active btn-block" id="up">UP</button></a></p>
+                <p><a href="/down"><button class="btn btn-success active btn-block" id="down">DOWN</button></a></p>
+                <p><a href="/stop"><button class="btn btn-danger active btn-block" id="stop">STOP</button></a></p>
+                <p><a href="/tilt-up"><button class="btn btn-primary active btn-block" id="tiltUp">TILT UP</button></a></p>
+                <p><a href="/tilt-down"><button class="btn btn-primary active btn-block" id="tiltDown">TILT DOWN</button></a></p>
+            </div>
+            <div class="col-6 mt-5">
+                <div class="w-25 h-75 bg-white" style="margin-left: 35%;">
+                    <img src="img/blinds-top.png" alt="blinds top" class="mx-auto d-block">
+                    <img src="img/blinds.png" alt="blinds" class="mx-auto d-block" id="blinds-img">
+                    <br>
+                    <p><b>Blinds State</b></p>
+                </div>
+            </div>
         </div>
+        
     </main>
     <footer class="container-fluid text-center bg-dark text-white jumbotron">
         <p>&copy; 2022/2023 - Pavel Košnar</p>
