Snad Finální Verze

--- a/data/index.html
+++ b/data/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 
 <head>
     <meta charset="UTF-8">
@@ -20,14 +20,16 @@
     <main>
         <div class="row container p-3 border bg-dark text-center" style="margin-top: 0 !important;margin-bottom: 0 !important;margin-left: 20%;">
             <div class="col-6">
-                <p><a href="/up"><button class="btn btn-success active btn-block" id="up">UP</button></a></p>
+                <p><a href="#"><button class="btn btn-success active btn-block" id="up">UP</button></a></p>
                 <p><a href="/down"><button class="btn btn-success active btn-block" id="down">DOWN</button></a></p>
                 <p><a href="/stop"><button class="btn btn-danger active btn-block" id="stop">STOP</button></a></p>
                 <p><a href="/tilt-up"><button class="btn btn-primary active btn-block" id="tiltUp">TILT UP</button></a></p>
                 <p><a href="/tilt-down"><button class="btn btn-primary active btn-block" id="tiltDown">TILT DOWN</button></a></p>
+                <p><a href="/step-up"><button class="btn btn-primary active btn-block" id="stepUp">STEP UP</button></a></p>
+                <p><a href="/step-down"><button class="btn btn-primary active btn-block" id="stepUp">STEP DOWN</button></a></p>
             </div>
             <div class="col-6 mt-5">
-                <div class="w-25 h-75 bg-white" style="margin-left: 35%;">
+                <div class="w-25 h-50 bg-white" style="margin-left: 35%;">
                     <img src="img/blinds-top.png" alt="blinds top" class="mx-auto d-block">
                     <img src="img/blinds.png" alt="blinds" class="mx-auto d-block" id="blinds-img">
                     <br>
